# CoAP-network-dev

./: README.md  kpdla.ipynb  libcoap-3-notls.la
Client/: general  general.c  general.h
Gateway/: CMakeLists.txt
Gateway/cmake/: FindCoAP3.cmake
